# graph-rag-graph-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
eval_data/: README.md  shopflow_gold.yaml
graph_rag_graph_agent/: config.py
graph_rag_graph_agent/agents/: common.py  graph_agent.py  memory.py  ontology_agent.py  pageindex_agent.py  rag_agent.py  router_agent.py
graph_rag_graph_agent/eval/: generate.py  judge.py  oracle.py  report.py  run.py  trace.py
graph_rag_graph_agent/graph/: driver.py  loader.py  schema.py  tools.py
graph_rag_graph_agent/ontology/: __init__.py  build.py  store.py
graph_rag_graph_agent/pageindex/: __init__.py  index.py  store.py
graph_rag_graph_agent/rag/: ingest.py  retriever.py
iterations/v1/: eval_report.md  eval_run.json  iteration.yaml  paper.md
iterations/v2/: eval_report.md  eval_run.json  iteration.yaml  paper.md
iterations/v3/: eval_report.md  eval_run.json  iteration.yaml  paper.md
iterations/v4/: eval_report.md  eval_run.json  iteration.yaml  paper.md
iterations/v5/: eval_report.md  eval_run.json  iteration.yaml  paper.md
iterations/v6/: eval_report.md  eval_run.json  iteration.yaml  paper.md
iterations/v7/: eval_report.md  eval_run.json  iteration.yaml  paper.md
iterations/v8/: eval_report.md  eval_run.json  iteration.yaml  paper.md
iterations/v9/: eval_report.md  eval_run.json  iteration.yaml  paper.md
